--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
   output:
     ansi:
       enabled: always
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
   jpa:
     hibernate:
@@ -35,3 +39,6 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
+
+file:
+  upload-dir: uploads/profile
