로컬 이미지 저장소 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,4 +41,6 @@ logging:
     org.hibernate.SQL: debug
 
 file:
-  upload-dir: uploads/profile
+  upload-dir:
+    profile: uploads/profile
+    article: uploads/article
