ADD: 엑세스, 리프레시 토큰 헤더 저장, CORS 설정 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 application:
-  name: KTB_7WEEK
+  name: KTB_10WEEK
   auth:
-    secret: secretKey
+    secret: SECRET_KEY
     token:
+      issuer : KTB_10WEEK
       expire: 10
 
 springdoc:
