--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,11 +11,12 @@ application:
       refresh-token-cookie-path: /auth/access/token/refresh
       refresh-token-cookie-max-age: 604800 # 7일
       refresh-token-cookie-same-site: Lax
+      refresh-token-cookie-domain: localhost
     cors:
       allowed-origins: http://localhost:5500
       allowed-methods: GET,POST,PATCH,DELETE,OPTIONS
       allowed-headers: "*"
-      exposed-headers: Authorization,X-Refresh-Token
+      exposed-headers: Authorization
       max-age: 3600
       url-source: /**
 
@@ -43,7 +44,6 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-
   jpa:
     hibernate:
       ddl-auto: none   # 개발 중에는 create / create-drop / update 중 선택
@@ -61,3 +61,11 @@ file:
     article: uploads/article
   logo: logo
 
+server:
+  port: 8080
+  ssl:
+    enabled: true
+    key-store: src/main/resources/bootsecurity.p12
+    key-store-password: 123456
+    key-store-type: PKCS12
+    key-alias: bootsecurity
